; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-xgene.c_xgene_gpio_get_direction.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-xgene.c_xgene_gpio_get_direction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_chip = type { i32 }
%struct.xgene_gpio = type { i64 }

@GPIO_SET_DR_OFFSET = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gpio_chip*, i32)* @xgene_gpio_get_direction to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xgene_gpio_get_direction(%struct.gpio_chip* %0, i32 %1) #0 {
  %3 = alloca %struct.gpio_chip*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.xgene_gpio*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.gpio_chip* %0, %struct.gpio_chip** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.gpio_chip*, %struct.gpio_chip** %3, align 8
  %9 = call %struct.xgene_gpio* @gpiochip_get_data(%struct.gpio_chip* %8)
  store %struct.xgene_gpio* %9, %struct.xgene_gpio** %5, align 8
  %10 = load i64, i64* @GPIO_SET_DR_OFFSET, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i64 @GPIO_BANK_OFFSET(i32 %11)
  %13 = add i64 %10, %12
  store i64 %13, i64* %6, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i64 @GPIO_BIT_OFFSET(i32 %14)
  store i64 %15, i64* %7, align 8
  %16 = load %struct.xgene_gpio*, %struct.xgene_gpio** %5, align 8
  %17 = getelementptr inbounds %struct.xgene_gpio, %struct.xgene_gpio* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* %6, align 8
  %20 = add i64 %18, %19
  %21 = call i32 @ioread32(i64 %20)
  %22 = load i64, i64* %7, align 8
  %23 = call i32 @BIT(i64 %22)
  %24 = and i32 %21, %23
  %25 = icmp ne i32 %24, 0
  %26 = xor i1 %25, true
  %27 = xor i1 %26, true
  %28 = zext i1 %27 to i32
  ret i32 %28
}

declare dso_local %struct.xgene_gpio* @gpiochip_get_data(%struct.gpio_chip*) #1

declare dso_local i64 @GPIO_BANK_OFFSET(i32) #1

declare dso_local i64 @GPIO_BIT_OFFSET(i32) #1

declare dso_local i32 @ioread32(i64) #1

declare dso_local i32 @BIT(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
